<resources>
        <string name="app_name">Reminder</string>
        <string name="main_activity_name">All Tasks</string>
        <string name="add_task_activity_name">Add a New Task</string>
        <string name="starting_text">Select the add button to add a reminder.</string>

        <string name="priority_1">1</string>
        <string name="priority_2">2</string>
        <string name="priority_3">3</string>

        <string name="task_description">Describe your task&#8230;</string>
        <string name="priority">Priority</string>
        <string name="high_priority">High</string>
        <string name="med_priority">Medium</string>
        <string name="low_priority">Low</string>
        <string name="add_button">Add</string>
        <string name="success_toast">Reminder set successful!</string>



</resources>
