<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="16dp"
              android:paddingEnd="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingStart="16dp"
              android:paddingTop="16dp"
              android:weightSum="1">

    <EditText

        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="start"
        android:hint="@string/task_description"
        android:paddingBottom="16dp"/>

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        />


    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">


            <Button

                android:id="@+id/buttonP1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Red"
                android:onClick="onPrioritySelected"
                android:text="@string/high_priority"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"/>


            <Button


                android:id="@+id/buttonP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Orange"
                android:onClick="onPrioritySelected"
                android:text="@string/med_priority"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"/>


            <Button


                android:id="@+id/buttonP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/BrightGreen"
                android:onClick="onPrioritySelected"
                android:text="@string/low_priority"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"/>



        </LinearLayout>

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">


            <RadioButton

                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="onPrioritySelected"
                android:theme="@style/WhiteRadioButton"/>


            <RadioButton

                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>



            <RadioButton

                android:id="@+id/radButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

        </RadioGroup>


    </FrameLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/B"
        android:onClick="onClickAddTask"
        android:text="@string/add_button"
        android:textColor="@color/black"
        android:textSize="22sp"/>


</LinearLayout>